# whatsapp-bot-backend

./: .env.example  .gitignore  DEVIN_SESSION_EXPORT.md  Dockerfile  fly.toml  pi_sheet_data.json  pyproject.toml
.agents/skills/testing-live-dashboard/: SKILL.md
.agents/skills/testing-reconciliation/: SKILL.md
app/: auth.py  database.py  main.py  personalized_parents.json  seed_data.py  trueface_users.json
app/dashboard_dist/: index.html
app/dashboard_dist/assets/: index-B7177ZXV.css  index-DVPzZOlJ.js  index-LtMxLf20.js
app/models/: schemas.py
app/routes/: agent_config.py  agent_ws.py  allowlist.py  bulk.py  c1_pilot.py  chairman_mood.py  dashboard.py  face.py  gate.py  messages.py  mother_teacher.py  relay_dashboard.py  settings.py  trueface.py  webhook.py
app/services/: attachment_service.py  bulk_service.py  email_polling_service.py  email_service.py  gate_analytics_service.py  homework_delivery_service.py  law_minister_bot.py  markitdown_service.py  meal_monitoring_service.py  mother_teacher_service.py  openai_service.py  relay_service.py  scheduler_service.py  sheet_refresh_service.py  showcase_reminder_service.py  sms_service.py  subject_teacher_service.py  teacher_attendance_excel.py  whatsapp_service.py
app/static/: student_dobs.json  transport_data.json
tests/: test_c1_gate_intelligence.py  test_c1_pilot.py  test_c1_signal.py  test_cpplus_verified_corrections.py  test_gate_analytics.py  test_showcase_reminders.py  test_snapshot_access_grants.py  test_trueface_chairman_notifications.py
