[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "openai>=2.30.0",
    "psycopg[binary]>=3.3.3",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "fpdf2>=2.8.0",
    "markitdown>=0.1.0",
    "opencv-python-headless>=4.8.0",
]

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.3"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
openai = "^2.30.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
aiosqlite = "^0.22.1"
apscheduler = "^3.11.2"
openpyxl = "^3.1.0"
fpdf2 = "^2.8.0"
markitdown = ">=0.1.0"
opencv-python-headless = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
